--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,11 @@
 <div style='border: 3px dashed red'>
-  My name is <%= @name %>
+
+  <% if @visitor %>
+    hello <%= @visitor %>
+  <% end %>
+
+  <% if @name %>
+    My name is <%= @name %>
+  <% end %>
   <img src='http://bit.ly/1eze8aE'>
 </div>
