--- a/views/index.erb
+++ b/views/index.erb
@@ -2,10 +2,13 @@
 
   <% if @visitor %>
     hello <%= @visitor %>
+  <% else %>
+    <form action="/hello">
+      My name is <%= @name %>
+      What's your name?
+      <input type="text" name="name">
+      <input type="submit" value="Submit">
+    </form>
   <% end %>
-
-  <% if @name %>
-    My name is <%= @name %>
-  <% end %>
-  <img src='http://bit.ly/1eze8aE'>
+    <img src='http://bit.ly/1eze8aE'>
 </div>
