Added public folder

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,5 +10,5 @@
       <input type="submit" value="Submit">
     </form>
   <% end %>
-    <img src='http://bit.ly/1eze8aE'>
+    <img src='/images/kitten.png'>
 </div>
